[#26216319] Fixed column for controls and truncate email address.

--- a/app/assets/stylesheets/customers.css.scss
+++ b/app/assets/stylesheets/customers.css.scss
@@ -1,3 +1,11 @@
-// Place all the styles related to the customers controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.controls {
+  min-width: 200px;
+}
+
+
+.truncate-email {
+	width: 250px;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
